initial translation in place
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,15 +15,21 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        {% for menu in site.t.nav[page.lang] %}
+          <li>
+          <a class="page-scroll" href="{{ menu.url }}">{{ menu.name }}</a>
+          </li>
+        {% endfor %}
+        {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+        {% for page in pages %}
+          <li>
+          <a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a>
+          </li>
+        {% endfor %}
         {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
         {% for post in posts %}
           <li>
           <a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a>
-          </li>
-        {% endfor %}
-        {% for menu in site.t.nav[page.lang] %}
-          <li>
-          <a href="{{ menu.url }}">{{ menu.name }}</a>
           </li>
         {% endfor %}
       </ul>
