--- a/css/creative.css
+++ b/css/creative.css
@@ -417,3 +417,7 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #222;
 }
+ul > li > a.en:lang(en),
+ul > li > a.fr:lang(fr) {
+    border: 1px solid;
+}
