--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
     {% include head.html %}
 
-    <body>
+    <body id="page-top">
         {% include nav.html %}
         {% include header.html %}
         {% include about.html %}
