--- a/less/creative.less
+++ b/less/creative.less
@@ -326,6 +326,10 @@ header {
 .btn-primary {
     .button-variant(white;@theme-primary;@theme-primary);
 }
+.btn-primary.navbar-btn.btn-sm {
+    margin-top: 12px;
+    margin-bottom: 10px;
+}
 
 .btn {
     .sans-serif-font;
@@ -365,4 +369,23 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: @theme-dark;
+}
+
+.dropdown-menu {
+    background: @theme-primary;
+    a {
+        .sans-serif-font;
+        display: block;
+        text-transform: uppercase;
+        font-weight: 700;
+        color: fade(white, 70%);
+        .sans-serif-font;
+        font-weight: 700;
+        text-transform: uppercase;
+        &:hover,
+        &:focus {
+            color: white;
+            background-color: @theme-focus;
+        }
+    }
 }
