--- a/css/creative.css
+++ b/css/creative.css
@@ -41,7 +41,7 @@ p {
   background-color: #3a22a6;
 }
 .bg-dark {
-  background-color: #222;
+  background-color: #222222;
   color: white;
 }
 .text-faded {
@@ -79,7 +79,7 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #222;
+  color: #222222;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
@@ -128,7 +128,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: #222;
+    color: #222222;
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
@@ -291,9 +291,9 @@ header .header-content .header-content-inner p {
   padding-left: 0;
 }
 .btn-default {
-  color: #222;
-  background-color: white;
-  border-color: white;
+  color: #222222;
+  background-color: #ffffff;
+  border-color: #ffffff;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -304,7 +304,7 @@ header .header-content .header-content-inner p {
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  color: #222;
+  color: #222222;
   background-color: #ee4b28;
   border-color: #ededed;
 }
@@ -331,15 +331,15 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: white;
-  border-color: white;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-default .badge {
-  color: white;
-  background-color: #222;
+  color: #ffffff;
+  background-color: #222222;
 }
 .btn-primary {
-  color: white;
+  color: #ffffff;
   background-color: #3a22a6;
   border-color: #3a22a6;
   -webkit-transition: all 0.35s;
@@ -352,7 +352,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: white;
+  color: #ffffff;
   background-color: #ee4b28;
   border-color: #ededed;
 }
@@ -384,7 +384,11 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-primary .badge {
   color: #3a22a6;
-  background-color: white;
+  background-color: #ffffff;
+}
+.btn-primary.navbar-btn.btn-sm {
+  margin-top: 12px;
+  margin-bottom: 10px;
 }
 .btn {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -399,12 +403,12 @@ fieldset[disabled] .btn-primary.active {
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background: #222;
+  background: #222222;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background: #222;
+  background: #222222;
 }
 img::selection {
   color: white;
@@ -415,9 +419,20 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #222;
+  webkit-tap-highlight-color: #222222;
 }
-ul > li > a.en:lang(en),
-ul > li > a.fr:lang(fr) {
-    border: 1px solid;
+.dropdown-menu {
+  background: #3a22a6;
+}
+.dropdown-menu a {
+  display: block;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.dropdown-menu a:hover,
+.dropdown-menu a:focus {
+  color: white;
+  background-color: #eb3812;
 }
