--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -5,7 +5,7 @@
             <h2 class="section-heading">{{ site.t.partners.title[page.lang] }}</h2>
            <hr class="primary">
         </div><!-- cols -->
-      </div><!-- row -->
+     </div><!-- row -->
   </div><!-- container -->
   <div class="container">
     <div class="row">
@@ -20,14 +20,13 @@
              <a href="https://www.computecanada.ca/" target="_blank" >
                 <img src="img/portfolio/compute-canada.jpg" class="wow zoomIn" alt=""></a>
           </div><!-- partners-box -->
-        </div><!-- columns -->
-      </div><!-- columns -->
+       </div><!-- columns -->
     </div><!-- row -->
     <div class="row">
       <div class="text-center">
-        <a href="https://jupyter.org/" target="_blank" >
-          <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
-      </div>
+         <a href="https://jupyter.org/" target="_blank" >
+            <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
+      </div><!-- text-center -->
     </div><!-- row -->
   </div><!-- container -->
 </section>
