--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,8 @@
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://ualberta.syzygy.ca">UAlberta</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
