--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,6 +42,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uleth.syzygy.ca">ULeth</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://unb.syzygy.ca">UNB</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ur.syzygy.ca">URegina</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
