--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,8 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
+                  <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
