URegina link corrected
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -48,7 +48,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="https://ur.syzygy.ca">URegina</a>
+                  <a class="dropdown-item" href="https://uregina.syzygy.ca">URegina</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
                   <div class="dropdown-divider"></div>
