--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -24,7 +24,7 @@
     </div><!-- row -->
     <div class="row">
       <div class="text-center">
-         <a href="https://jupyter.org/" target="_blank" >
+         <a href="https://www.cybera.ca/" target="_blank" >
             <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
       </div><!-- text-center -->
     </div><!-- row -->
