--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -46,6 +46,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uleth.syzygy.ca">ULeth</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://umanitoba.syzygy.ca">UManitoba</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://unb.syzygy.ca">UNB</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
