Add Athabascau and Sherbrooke
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,8 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
+                  <a class="dropdown-item" href="https://athabascau.syzygy.ca">Athabascau</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://bcit.syzygy.ca">BCIT</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
@@ -58,6 +60,8 @@
                   <a class="dropdown-item" href="https://uregina.syzygy.ca">URegina</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://usherbrooke.syzygy.ca">USerbrooke</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://utoronto.syzygy.ca">UToronto</a>
                   <div class="dropdown-divider"></div>
