--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,3 +11,5 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/creative.js"></script>
+<!-- Custom local JS -->
+<script src="js/local.js"></script>
