--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <body id="page-top">
         {% include nav.html %}
         {% include header.html %}
+        {% include map.html %}
         {% include about.html %}
         {% include languages.html %}
         {% include service.html %}
