Add a header for the map area Still needs work
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,3 +1,38 @@
 <div id="gmap-holder">
-  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1nzSAGLSn8eWdfQ6K7zTw-31h82I" id="gmap-iframe" style="min-height: 100%; width: 100%" ></iframe>
+  <section id="gmap">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 text-center">
+          <h2 class="section-heading">Our Network</h2>
+          <hr class="primary">
+        </div>
+      </div>
+      <!--
+      <div class="row">
+        <div class="col-lg-12 col-md-12 text-center">
+          <p>Syzygy has been used by over 34000 people at institutions across Canada.</p>
+        </div>
+      </div>
+      -->
+      <div class="row">
+        <div class="col-lg-4 col-md-4">
+          <ul class="ul-edu fa-ul">
+            <li><i class="fa-li fa fa-users"></i><span>34000+ users</span></li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <ul class="ul-edu fa-ul">
+            <li><i class="fa-li fa fa-university"></i><span>23 universities</span></li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <ul class="ul-edu fa-ul">
+            <li><i class="fa-li fa fa-globe"></i><span>2 countries</span></li>
+            <li><i class="fa-li fa fa-globe"></i><span>7 provinces, 1 state</span></li>
+          </ul>
+        </div>
+      </div>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1nzSAGLSn8eWdfQ6K7zTw-31h82I" id="gmap-iframe" style="min-height: 100%; width: 100%" ></iframe>
+    </div>
+  </section>
 </div>
