Update layout a bit and adjust striping
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,5 +1,5 @@
 <div id="gmap-holder">
-  <section id="gmap">
+  <section class="bg-primary" id="gmap">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
@@ -27,11 +27,14 @@
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-globe"></i><span>2 countries</span></li>
+            <li><i class="fa-li fa fa-globe"></i><span>2 countries<span></li>
+          </ul>
+          <ul class="ul-edu fa-ul">
             <li><i class="fa-li fa fa-globe"></i><span>7 provinces, 1 state</span></li>
           </ul>
         </div>
       </div>
+      <hr class="primary">
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1nzSAGLSn8eWdfQ6K7zTw-31h82I" id="gmap-iframe" style="min-height: 100%; width: 100%" ></iframe>
     </div>
   </section>
