--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,18 +5,22 @@
                 <div class="funding-box">
                 <h2 class="section-heading">{{ site.t.about.what[page.lang] }}</h2>
                 <hr class="light">
+                <ul class="ul-edu fa-ul">
                 {% for item in site.t.about.what.items %}
-                  <p class="text"><i class="{{ item.class }}" aria-hidden="true"></i>{{ item.text[page.lang] }}</p>
+                    <li><i class="fa-li {{ item.class }}" aria-hidden="true"></i>{{ item.text[page.lang] }}</li>
                 {% endfor %}
+                </ul>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="funding-box">
                 <h2 class="section-heading">{{ site.t.about.where[page.lang] }}</h2>
                 <hr class="light">
+                <ul class="ul-edu fa-ul">
                 {% for item in site.t.about.where.items %}
-                  <p class="text"><i class="{{ item.class }}" aria-hidden="true"></i>{{ item.text[page.lang] }}</p>
+                  <li><i class="fa-li {{ item.class }}" aria-hidden="true"></i>{{ item.text[page.lang] }}</li>
                 {% endfor %}
+                </ul>
                 </div>
             </div>
         </div>
