Adding flags to stats
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -27,10 +27,7 @@
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-globe"></i><span>2 countries<span></li>
-          </ul>
-          <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-globe"></i><span>7 provinces, 1 state</span></li>
+            <li><i class="fa-li fa fa-globe"></i><span>7 &#127464;&#127462; Provinces, 1 &#127482;&#127480; State</span></li>
           </ul>
         </div>
       </div>
