Update terminology for stats
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-university"></i><span>23+ universities</span></li>
+            <li><i class="fa-li fa fa-university"></i><span>25+ institutions</span></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
