Updating translation to include map
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
-          <h2 class="section-heading">Our Network</h2>
+          <h2 class="section-heading">{{ site.t.map.title[page.lang] }}</h2>
           <hr class="primary">
         </div>
       </div>
@@ -17,17 +17,17 @@
       <div class="row">
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-users"></i><span>34000+ users</span></li>
+            <li><i class="fa-li fa fa-users"></i><span>{{ site.t.map.stats.users[page.lang] }}</span></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-university"></i><span>25+ institutions</span></li>
+            <li><i class="fa-li fa fa-university"></i><span>{{ site.t.map.stats.institutions[page.lang] }}</span></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="ul-edu fa-ul">
-            <li><i class="fa-li fa fa-globe"></i><span>7 &#127464;&#127462; Provinces, 1 &#127482;&#127480; State</span></li>
+            <li><i class="fa-li fa fa-globe"></i><span>{{ site.t.map.stats.provinces[page.lang] }}</span></li>
           </ul>
         </div>
       </div>
