Adding stats from our grafana host
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -15,20 +15,29 @@
       </div>
       -->
       <div class="row">
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-4 text-center">
+          <!--
           <ul class="ul-edu fa-ul">
             <li><i class="fa-li fa fa-users"></i><span>{{ site.t.map.stats.users[page.lang] }}</span></li>
           </ul>
+          -->
+          <img alt="Hub count" src="https://stats.syzygy.ca/public/images/total_users.png"/>
         </div>
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-4 text-center">
+          <!--
           <ul class="ul-edu fa-ul">
             <li><i class="fa-li fa fa-university"></i><span>{{ site.t.map.stats.institutions[page.lang] }}</span></li>
           </ul>
+          -->
+          <img alt="Hub count" src="https://stats.syzygy.ca/public/images/hub_count.png" class="img-fluid rounded mx-auto d-block"/>
         </div>
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-4 text-center">
+          <!--
           <ul class="ul-edu fa-ul">
             <li><i class="fa-li fa fa-globe"></i><span>{{ site.t.map.stats.provinces[page.lang] }}</span></li>
           </ul>
+          -->
+          <img alt="Hub count" src="https://stats.syzygy.ca/public/images/current_users.png"/>
         </div>
       </div>
       <hr class="primary">
