New form needed for Formspree changes
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     </div>
     <br>
     <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 text-center">
-        <form action="https://formspree.io/{{ site.email }}" method="POST">
+        <form action="https://formspree.io/f/xbjpqqnp" method="POST">
          <br>
          <fieldset class="form-group">
              <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="{{ site.t.header.form.name[page.lang] }}">
