Various updates including jquery and content
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -57,6 +57,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://uqam.syzygy.ca">UQAM</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uregina.syzygy.ca">URegina</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
