--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,11 +33,15 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://concordia.syzygy.ca">Concordia</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://etsmtl.syzygy.ca">ETSMTL</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://nic.syzygy.ca">NIC</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
                   <div class="dropdown-divider"></div>
@@ -48,6 +52,8 @@
                   <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ucalgary.syzygy.ca">UCalgary</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://ufv.syzygy.ca">UFV</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uleth.syzygy.ca">ULeth</a>
                   <div class="dropdown-divider"></div>
@@ -74,6 +80,10 @@
                   <a class="dropdown-item" href="https://uw.syzygy.ca">UW (Washington)</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uwaterloo.syzygy.ca">UWaterloo</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://uwindsor.syzygy.ca">UWindsor</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://wlu.syzygy.ca">WLU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://yorku.syzygy.ca">YorkU</a>
                   <div class="dropdown-divider"></div>
